# litert-examples

./: .gitmodules  CMakeLists.txt  LICENSE  README.rst  main.cc  main.cpp
core/: LICENSE  core.cpp  core.hpp
gui/: window.cpp  window.hpp
